ajustement code component rating pour corriger les erreurs dans la console + affichage des equipments dans les collapse en liste + correction mise en page collapse + correction affichage tags

--- a/src/style/components/Collapse/style.scss
+++ b/src/style/components/Collapse/style.scss
@@ -67,6 +67,10 @@
     margin: 0px 20px;
     font-size: $small-font-size;
     overflow: hidden;
+
+    div {
+      padding: 18px 0px;
+    }
   }
 
   .collapse-content.slide-down {
